--- a/shop.css
+++ b/shop.css
@@ -17,7 +17,7 @@ padding: 14px;
     color:#fff;
 }
 
-#pagination{
+#pagination a{
     text-align: center;
     background-color: #087778;
     padding: 15px 20px;
