--- a/sproduct.css
+++ b/sproduct.css
@@ -54,3 +54,23 @@
 #prodetails .single-pro-details span {
   line-height: 25px;
 }
+
+
+@media (max-width:477px){
+#prodetails{
+  display: flex;
+  flex-direction: column;
+}
+
+#prodetails .single-pro-image {
+  width: 40%;
+  margin-right: 50px;
+}
+
+#prodetails .single-pro-details{
+width: 50%;
+padding-top: 30px;
+}
+
+
+}
